--- a/templates/click_day_details.html
+++ b/templates/click_day_details.html
@@ -1,46 +1,91 @@
 {% extends 'base.html' %}
 {% block content %}
+<body class="dashboard-top">
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="/todaydashboard">
+        <img src="../static/17647.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        Fitastic
+    </a>
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ session['username'] }}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="/logout">Logout</a>
+            </div>
+        </li>
+    </ul>
+</nav>
 
 <table class='container'>
     <tr>
+        {% if not workout %}
+        <th> Rest Day </th>
+        {% else %}
         <th class="workout">{{ workout.scheduled_at }} {{ workout.description }} </th>
         <a href="/add_more_exercises/{{workout.workout_id}}">Add more exercise</a>
+        <br>
+        <a href="/todaydashboard"> Back to Main Dashboard</a>
+        {% endif %}
     </tr>
-
+    {% if not workout %}
+    No workout scheduled
+    {% else %}
     {% for exercise in workout.exercises %}
 
+
     <tr>
-        <td>
-            {{ exercise.name }} 
-          
-            <form action='/deleteexercises/{{exercise.exercise_id}}' method="POST" class="delete-exericise">
-                <input type="hidden" name="exercise_id" value="{{exercise.exercise_id}}" class="to_delete">
-                <input type="submit" value="Delete" class="form-submit-button">
-            </form>
-            <form action='/updateexercises/{{exercise.exercise_id}}' class="update-exercise">
-                <input type="hidden" name="exercise_id" value="{{exercise.exercise_id}}" class="to_update">
-                <input type="submit" value="Update" class="form-submit-button">
-            </form>
-            <div class='exercise-detals'>
-      
-            {{ exercise.set_number }} x {{ exercise.rep_number }} {{ exercise.rep_unit.rep_unit_name }} at {{ exercise.weight }} {{  exercise.weight_unit.weight_unit_name }} 
-            <div>
-                <br>
-                Description: {{ exercise.description | safe }}
-                <br>
+        <td> 
+            {{ exercise.name }}
+            <div class = "row">
+                <form action='/deleteexercises/{{exercise.exercise_id}}' method="POST" class="delete-exericise">
+                    <input type="hidden" name="exercise_id" value="{{exercise.exercise_id}}" class="to_delete">
+                    <button type="submit" value="Delete" class="form-submit-button btn navbar-btn btn-default"><i class="fas fa-trash-alt"></i></button>
+                </form>
+                <form action='/updateexercises/{{exercise.exercise_id}}' class="update-exercise">
+                    <input type="hidden" name="exercise_id" value="{{exercise.exercise_id}}" class="to_update">
+                    <button type="submit" value="Update" class="form-submit-button btn navbar-btn btn-primary"><i class="fas fa-edit"></i></button>
+                    </form>
+                </div>
                 Equipments:
                 {% for equipment in exercise.equipments %}
-                    {{ equipment.equipment_name }}
+                {{ equipment.equipment_name }}
                 {% endfor %}
+                <br>
+                {{ exercise.set_number }} x {{ exercise.rep_number }} {{ exercise.rep_unit.rep_unit_name }} at {{ exercise.weight }} {{ exercise.weight_unit.weight_unit_name }}
+                    <br>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                          Instructions</button>
+
+
+                        <!-- Modal -->
+                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">{{ exercise.name }} </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        Instruction: {{ exercise.description | safe }}
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
-            <div>
-                {% for image in exercise.images %}
-                <img src={{ image.image_link }} height="42" width="42">
-                {% endfor %}
-            </div>
-        </td>
-    </tr>
-    {% endfor %}
+       
+    </div>
+</td>
+</tr>
+{% endfor %}
+{% endif %}
 </table>
 
 <div class="detail-form">
@@ -83,6 +128,7 @@
         </div>
     </form>
 <div>
+</body>
 
 <script>
     $(function() {
