--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,76 @@
     <link href='../static/fullcalendar.min.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href='../static/fullcalendar.print.min.css' rel='stylesheet' media='print' />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">           
 
     <script src='../static/lib/moment.min.js'></script>
     <script src='../static/lib/jquery.min.js'></script>
     <script src='../static/fullcalendar.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 
     <style>
+
+        .intro-heading{
+        
+            width: 800px;
+            padding: 50px;
+           
+        }
+        .container-1 {
+            display: flex;
+            justify-content: center;
+            padding: 100px;
+            margin-right: auto;
+            margin-left:auto;
+            
+
+        }
+
+        .page-top{
+            background-image:  url('../static/firstpage5.jpg');
+            background-size: cover;
+            text-align: center;
+            font-size: 2rem;
+            font-weight: 500;
+            color: white;
+
+
+        }
+        header .intro-text .intro-lead-in{
+            font-family:"Open Sans Bold", Arial, Helvetica, sans-serfi;
+            font-style: italic;
+            font-size:22px;
+            line-height: 22px;
+            margin-bottom: 25px;
+            text-align: center;
+            
+
+        }
+        .btn-xl{
+            color:white;
+            
+            border-color:#204a87;
+            font-family:"Open Sans Bold", Arial, Helvetica, sans-serfi;
+            text-transform: uppercase;
+            font-weight: 700;
+            border-radius: 3px;
+            font-size:18px;
+            padding: 20px 40px;
+        }
+        .btn{
+            display: inline-block;
+            margin-bottom: 0;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            touch-action:manipulation;
+            cursor: pointer;
+            border: 1px solid;
+        }
         .exercise-form {
             display: none;
         }
@@ -31,9 +93,11 @@
             width: 500px;
             height: 300px;
             z-index: 15;
+            padding: 10px 10px 10px;
             top:70%;
             left:60%;
-            margin: -100px 100px 100px -150px;
+            margin: -380px 50px 50px -380px;
+            background-color: blue;
 
         }
         #calendar {
@@ -50,6 +114,10 @@
         table, th, td {
             border:1px solid black;
         }
+        th,td{
+            padding: 15px;
+            text-align: left;
+        }
         #wrapper{
             display: flex;
             justify-content: center;
@@ -57,49 +125,43 @@
         }
         #c1, #c2, #calendar{
             width: 33%;
+            padding: 30px;
         }
         .form-submit-button {
 
-            background: #B9DFFF;
-
-            color: #fff;
-
-            border: 1px solid #eee;
-
-            border-radius: 20px;
-
-            box-shadow: 5px 5px 5px #eee;
-
-            text-shadow:none;
-            display: none;
-            
-
-
-        }
-        .container:hover .form-submit-button {
-            display: inline-block;
-
-            background: #016ABC;
-
-            color: #fff;
-
-            border: 1px solid #eee;
-
-            border-radius: 20px;
-
-            box-shadow: 5px 5px 5px #eee;
-
-            text-shadow:none;
-
+            background-color: grey;
+            border: none;
+            size:2px;
+            visibility: hidden;
         }
 
+        .show-button:hover .form-submit-button {
+            visibility: visible;
+            background-color: grey;
+            color: white;
+            border: none;
+            size: 1px;
+            text-shadow:none;
+            cursor: pointer;
 
+        }
+       
 
+        .list-group-item{
+            cursor: pointer;
+            background-color: #CAE4DB;
+        }
+        .row{
+            padding: 10px;
+        }
+
+     
     </style>
 </head>
 
 <body>
-<hr>
+    <!-- Image and text -->
+
 
 {% for flash in get_flashed_messages() %}
   {{ flash }}
