--- a/templates/choose_day.html
+++ b/templates/choose_day.html
@@ -1,13 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>Add a Training Day</h1>
-
-<form id="day-selection-form" action='/choose_training_day' method="POST">
-    <input type="date" id="start" name="workout-date" min="2019-01-01" max="2019-12-31">
-    description: <input type="text" name="description" id="memo">
-    <input type="submit" name="submit">
-</form>
+<body id="after-login-page">
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="/todaydashboard">
+        <img src="../static/17647.png"  width="30" height="30" class="d-inline-block align-top" alt="">
+        Fitastic
+    </a>
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ session['username'] }}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="/logout">Logout</a>
+            </div>
+        </li>
+    </ul>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <a href="/todaydashboard"> Back to Main Dashboard</a>
+    </div>
+    <div class="row">
+        <h3>Add a Training Day</h3>
+    </div>
+    <div class="col-6">
+        <form id="day-selection-form" action='/choose_training_day' method="POST">
+            <input type="date" id="start" name="workout-date" min="2019-01-01" max="2019-12-31">
+            description: <input type="text" name="description" id="memo">
+            <small id="emailHelp" class="form-text text-muted">A description of what is done on this day (e.g. "Pull day") or what body parts are trained (e.g. "Arms and abs")</small>
+            <input type="submit" name="submit" value="Save">
+        </form>
+    </div>
 
 <script>
     $(function() {    
@@ -27,37 +51,42 @@
 </script>
 
 <div class="exercise-form">
-<h1>Workout Search</h1>
+<h3>Search Exercises</h3>
 <form id="exercise-form" action="/choose_training_day" method="GET">
-    <h2>Equipment:</h2>
-    <input type="checkbox" name="equipment" value="Barbell" class="equipment_checkboxes">Barbell
-    <input type="checkbox" name="equipment" value="Bench" class="equipment_checkboxes">Bench
-    <input type="checkbox" name="equipment" value="Dumbbell" class="equipment_checkboxes">Dumbbell
-    <input type="checkbox" name="equipment" value="Gym mat" class="equipment_checkboxes">Gym mat
-    <input type="checkbox" name="equipment" value="Incline bench" class="equipment_checkboxes">Incline bench
-    <input type="checkbox" name="equipment" value="Kettlebell" class="equipment_checkboxes">Kettlebell
-    <input type="checkbox" name="equipment" value="none (bodyweight exercise)" class="equipment_checkboxes">none (bodyweight exercise)
-    <input type="checkbox" name="equipment" value="Pull-up bar" class="equipment_checkboxes">Pull-up bar
-    <input type="checkbox" name="equipment" value="Swiss Ball" class="equipment_checkboxes">Swiss Ball
-    <input type="checkbox" name="equipment" value="SZ-Bar" class="equipment_checkboxes">SZ-Bar
-
-    <h2>Body Parts:</h2>
-    <input type="checkbox" name="category" value="Abs" class="category_checkboxes">Abs
-    <input type="checkbox" name="category" value="Arms" class="category_checkboxes">Arms
-    <input type="checkbox" name="category" value="Back" class="category_checkboxes">Back
-    <input type="checkbox" name="category" value="Calves" class="category_checkboxes">Calves
-    <input type="checkbox" name="category" value="Chest" class="category_checkboxes">Chest
-    <input type="checkbox" name="category" value="Legs" class="category_checkboxes">Legs
-    <input type="checkbox" name="category" value="Shoulders" class="category_checkboxes">Shoulders
-
-    <div>
+    <h4>Equipment:</h4>
+    <select name="equipment" class="equipment_checkboxes selectpicker" >
+        <option value="">At Gym</option>
+        <option value="Barbell">Barbell</option>
+        <option value="Bench">Bench</option>
+        <option value="Dumbbell">Dumbbell</option>
+        <option value="Gym mat">Gym mat</option>
+        <option value="Incline bench">Incline bench</option>
+        <option value="Kettlebell">Kettlebell</option>
+        <option value="none (bodyweight exercise)">none (bodyweight exercise)</option>
+        <option value="Pull-up bar">Pull-up bar</option>
+        <option value="Swiss Ball">Swiss Ball</option>
+        <option value="SZ-Bar">SZ-Bar</option>
+        
+    </select>
+    <h4>Body Parts</h4>
+    <select name="category" class="category_checkboxes selectpicker">
+        <option value="Abs">Abs</option>
+        <option value="Arms">Arms</option>
+        <option value="Back">Back</option>
+        <option value="Calves">Calves</option>
+        <option value="Chest">Chest</option>
+        <option value="Legs">Legs</option>
+        <option value="Shoulders">Shoulders</option>
+        
+    </select>
+     <div>
     <br>
     <input id="exercise_submit" type="submit" name="submit">
     </div>
 </form>
 </div>
 
-<div id="exercise_result">
+<div id="exercise_result" class="col-6">
 </div>
 
 <div class="detail-form">
@@ -101,9 +130,10 @@
     </div>
 
 </form>
-<div>
-<a href="/todaydashboard">Back to today dashboard
 </div>
+
+</body>
+
 
 <script>
     $(function() {    
@@ -111,8 +141,8 @@
             evt.preventDefault();
 
             const formData = {
-                equipment: $('.equipment_checkboxes:checked').val(),
-                category: $('.category_checkboxes:checked').val()
+                equipment: $('.equipment_checkboxes').val(),
+                category: $('.category_checkboxes').val()
             };
             console.log(formData);
              
@@ -120,12 +150,12 @@
                 const exercise = results;
                 var list_html = "<br>"
                 list_html += "Results:"
-                list_html += "<ul>";
+                list_html += "<div>";
                 for (var i = 0; i < exercise.length; i++) {
                     var obj = exercise[i];
-                    list_html += "<li>" + "<a class='detail' data-id=" + obj.exercise_id + ">" + obj.name + "</li>";
+                    list_html +=   "<a class='list-group-item list-group-item-action' data-id=" + obj.exercise_id + ">" + obj.name ;
                 }
-                list_html += "</ul>"
+                list_html += "</div>"
                 $('#exercise_result').html(list_html);
             });
         });
@@ -162,7 +192,8 @@
                 weightunit: $('#weightunit').val()
             };
             console.log(formData);
-            $.post('/addexercises', formData)
+            $.post('/addexercises', formData);
+            $('.detail-form').toggle();
 
         });
     });
