--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="container">
 <h1>Register</h1>
 
 <form action="register" method="POST">
@@ -43,5 +43,6 @@
   </div>
 
 </form>
+</div>
 
 {% endblock %}
